--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         by {{pr.pullRequest.createdBy.displayName}}, from <i class="fa fa-code-fork"></i> {{pr.pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pr.pullRequest.targetRefName}}
       </div>
       <div>
-        <span *ngFor="let reviewer of pr.pullRequest.reviewers"><i class={{getVoteClasses(reviewer)}}></i> {{reviewer.displayName}}, </span>
+        <span *ngFor="let reviewer of pr.pullRequest.reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}}></i> {{reviewer.displayName}}</span>
       </div>
     </div>
   </div>
