separate pr display into a component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,5 @@
 <div class="container">
-  <div *ngFor="let pr of pullRequests | prFilter" class="row pull-request">
-    <div class="identity-image-container">
-      <img src="{{pr.pullRequest.createdBy.imageUrl}}" class="identity-image">
-    </div>
-    <div class="pull-request-details">
-      <div class="pull-request-title">
-        <a href="{{pr.remoteUrl}}" openExternal>{{pr.pullRequest.title}}</a>
-      </div>
-      <div>
-        by {{pr.pullRequest.createdBy.displayName}}, {{pr.repository.name}} from <i class="fa fa-code-fork"></i> {{pr.pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pr.pullRequest.targetRefName}}
-      </div>
-      <div>
-        <span *ngFor="let reviewer of pr.pullRequest.reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}}></i> {{reviewer.displayName}}</span>
-      </div>
-    </div>
+  <div *ngFor="let pr of pullRequests | prFilter" class="row">
+    <pull-request [pullRequest]="pr"></pull-request>
   </div>
 </div>
