--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -10,7 +10,7 @@
       by {{pullRequest.pullRequest.createdBy.displayName}}, {{pullRequest.repository.name}} from <i class="fa fa-code-fork"></i> {{pullRequest.pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.pullRequest.targetRefName}}
     </div>
     <div>
-      <span *ngFor="let reviewer of pullRequest.pullRequest.reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}}></i> {{reviewer.displayName}}</span>
+      <span *ngFor="let reviewer of pullRequest.pullRequest.reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}} title="{{getVoteTooltip(reviewer)}}"></i> {{reviewer.displayName}}</span>
     </div>
   </div>
 </div>
