icon for merge conflicts

--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -9,6 +9,9 @@
     <div>
       by {{pullRequest.pullRequest.createdBy.displayName}}, {{pullRequest.repository.name}} from <i class="fa fa-code-fork"></i> {{pullRequest.pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.pullRequest.targetRefName}}
     </div>
+    <div *ngIf="pullRequest.pullRequest.mergeStatus==='conflicts'">
+      <i class="fa fa-exclamation-circle vote rejected"></i> Merge Conflicts
+    </div>
     <div>
       <span *ngFor="let reviewer of pullRequest.pullRequest.reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}} title="{{getVoteTooltip(reviewer)}}"></i> {{reviewer.displayName}}</span>
     </div>
