--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -7,7 +7,7 @@
       <a href="{{pullRequest.remoteUrl}}" openExternal>{{pullRequest.title}}</a>
     </div>
     <div>
-      by {{pullRequest.createdBy}}, on {{pullRequest.repositoryName}} from <i class="fa fa-code-fork"></i> {{pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.targetRefName}}
+      by {{pullRequest.createdBy}}, on <span class="repo">{{pullRequest.repositoryName}}</span> from <i class="fa fa-code-fork"></i> {{pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.targetRefName}}
     </div>
     <div *ngIf="pullRequest.mergeStatus==='conflicts'">
       <i class="fa fa-exclamation-circle vote rejected"></i> Merge Conflicts
