attempt to switch to browser-based   - still issues with auth

--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="pull-request-details">
     <div class="pull-request-title">
-      <a href="{{pullRequest.remoteUrl}}" openExternal>{{pullRequest.title}}</a>
+      <a href="{{pullRequest.remoteUrl}}" target="_blank">{{pullRequest.title}}</a>
     </div>
     <div>
       by {{pullRequest.createdBy}}, on <span class="repo">{{pullRequest.repositoryName}}</span> from <i class="fa fa-code-fork"></i> {{pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.targetRefName}}
