--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -16,7 +16,7 @@
       <i class="fa fa-exclamation-circle vote rejected"></i> Merge Conflicts
     </div>
     <div>
-      <span *ngFor="let reviewer of pullRequest.reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}} title="{{getVoteTooltip(reviewer)}}"></i> {{reviewer.displayName}}</span>
+      <span *ngFor="let reviewer of reviewers; let i=index;"><span *ngIf="i>0">, </span><i class={{getVoteClasses(reviewer)}} title="{{getVoteTooltip(reviewer)}}"></i> <span title="{{reviewer.isRequired ? reviewer.displayName + ' (Required)' : reviewer.displayName}}">{{reviewer.isRequired ? reviewer.displayName + '*' : reviewer.displayName}}</span></span>
     </div>
   </div>
 </div>
