clicking a PR link navigates the parent page, instead of just within the extension iframe

--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="pull-request-details">
     <div class="pull-request-title">
-      <a href="{{pullRequest.remoteUrl}}">{{pullRequest.title}}</a>
+      <a href="{{pullRequest.remoteUrl}}" target="_parent">{{pullRequest.title}}</a>
     </div>
     <div>
       <span class="repo">{{pullRequest.repositoryName}}</span>, from <i class="fa fa-code-fork"></i> {{pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.targetRefName}}
