revert unintended commit

--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -10,7 +10,7 @@
       <span class="repo">{{pullRequest.repositoryName}}</span>, from <i class="fa fa-code-fork"></i> {{pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.targetRefName}}
     </div>
     <div>
-      by {{pullRequest.createdBy}}, at {{pullRequest.createdDate | date: 'medium HH:mm'}}
+      by {{pullRequest.createdBy}}, at {{pullRequest.createdDate | date: 'dd/MM/yyyy HH:mm'}}
     </div>
     <div *ngIf="pullRequest.hasMergeConflicts">
       <i class="fa fa-exclamation-circle vote rejected"></i> Merge Conflicts
