first pass at settings to change date format
update layout

default date format doesn't include seconds

remove dev settings

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -56,3 +56,15 @@
 .repo {
   color: #333333;
 }
+
+.settings {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+
+.settings-container {
+  min-width: 250px;
+}
