--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,43 @@
 <div class="container">
+  <div class="settings">
+    <div class="btn-group">
+      <button class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" title="Settings">
+        <i class="fa fa-cog"></i> <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu dropdown-menu-right" role="menu">
+        <form>
+          <li>
+            <div class="container-fluid settings-container">
+              <div class="form-group">
+                <label label-default="" for="inputDateFormat">Date Format</label>
+                <input class="form-control" id="inputDateFormat" [(ngModel)]="dateFormat" (ngModelChange)="onDateFormatChanged($event)" name="dateformat">
+              </div>
+            </div>
+          </li>
+        </form>
+      </ul>
+    </div>
+  </div>
   <div *ngIf="(pullRequests | prFilter:'requestedByMe').length > 0">
     <h4>Requested By Me</h4>
     <div *ngFor="let pr of pullRequests | prFilter:'requestedByMe' | prSort" class="row">
-      <pull-request [pullRequest]="pr"></pull-request>
+      <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
     </div>
   </div>
   <div *ngIf="(pullRequests | prFilter:'assignedToMe').length > 0">
     <h4>Assigned To Me</h4>
     <div *ngFor="let pr of pullRequests | prFilter:'assignedToMe' | prSort" class="row">
-      <pull-request [pullRequest]="pr"></pull-request>
+      <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
     </div>
   </div>
   <div *ngIf="(pullRequests | prFilter:'assignedToMyTeam').length > 0">
     <h4>Assigned To My Team</h4>
     <div *ngFor="let pr of pullRequests | prFilter:'assignedToMyTeam' | prSort" class="row">
-      <pull-request [pullRequest]="pr"></pull-request>
+      <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
     </div>
   </div>
   <h4>Other Open Pull Requests <ss-multiselect-dropdown [options]="repoOptions" [settings]="filterSettings" [texts]="filterTexts" [(ngModel)]="unfilteredRepoSelections" (ngModelChange)="onFilteredSelectionsChanged($event)"></ss-multiselect-dropdown></h4>
   <div *ngFor="let pr of pullRequests | prFilter:'other' | repoFilter:filteredRepoIds | prSort" class="row">
-    <pull-request [pullRequest]="pr"></pull-request>
+    <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
   </div>
 </div>
