--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{'widget': widgetMode }">
-  <h2 class="title" *ngIf="widgetMode">PR Widget</h2>
   <div class="container">
+      <h2 class="title" *ngIf="widgetMode">PR Widget</h2>
     <div class="settings" *ngIf="!widgetMode">
       <div class="btn-group">
         <button class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" title="Settings">
@@ -28,19 +28,19 @@
         </ul>
       </div>
     </div>
-    <div *ngIf="(pullRequests | prFilter:'requestedByMe').length > 0">
+    <div *ngIf="(!widgetMode || widgetCategory==='requestedByMe') && (pullRequests | prFilter:'requestedByMe').length > 0">
       <h4 *ngIf="!widgetMode">Requested By Me</h4>
       <div *ngFor="let pr of pullRequests | prFilter:'requestedByMe' | prSort" class="row">
         <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
       </div>
     </div>
-    <div *ngIf="!widgetMode && (pullRequests | prFilter:'assignedToMe').length > 0">
+    <div *ngIf="(!widgetMode || widgetCategory==='assignedToMe') && (pullRequests | prFilter:'assignedToMe').length > 0">
       <h4 *ngIf="!widgetMode">Assigned To Me</h4>
       <div *ngFor="let pr of pullRequests | prFilter:'assignedToMe' | prSort" class="row">
         <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
       </div>
     </div>
-    <div *ngIf="!widgetMode && (pullRequests | prFilter:'assignedToMyTeam').length > 0">
+    <div *ngIf="(!widgetMode || widgetCategory==='assignedToMyTeam') && (pullRequests | prFilter:'assignedToMyTeam').length > 0">
       <h4 *ngIf="!widgetMode">Assigned To My Team</h4>
       <div *ngFor="let pr of pullRequests | prFilter:'assignedToMyTeam' | prSort" class="row">
         <pull-request [pullRequest]="pr" [dateFormat]="dateFormat"></pull-request>
