--- a/src/app/pullRequest.component.html
+++ b/src/app/pullRequest.component.html
@@ -3,17 +3,14 @@
     <img src="{{pullRequest.createdByImageUrl}}" class="identity-image">
   </div>
   <div class="pull-request-details">
-    <div>
+    <div class="title-container">
       <a class="pull-request-title" href="{{pullRequest.remoteUrl}}" target="_parent">{{pullRequest.title}}</a>
     </div>
     <div>
-      <span class="repo">{{pullRequest.repositoryName}}</span>, from <i class="fa fa-code-fork"></i> {{pullRequest.sourceRefName}} to <i class="fa fa-code-fork"></i> {{pullRequest.targetRefName}}
+        by {{pullRequest.createdBy}} at {{pullRequest.createdDate | date: dateFormat}} into <i class="mdi mdi-git git-icon"></i><span class="repo">{{pullRequest.repositoryName}}</span> <i class="fa fa-code-fork branch-icon"></i>{{pullRequest.targetRefName}}
     </div>
     <div>
-      by {{pullRequest.createdBy}}, at {{pullRequest.createdDate | date: dateFormat}}
-    </div>
-    <div>
-      <span *ngIf="pullRequest.hasMergeConflicts" class="conflicts"><i class="fa fa-exclamation-circle"></i> Merge Conflicts</span><span *ngFor="let reviewer of pullRequest.reviewers; let i=index;"><span *ngIf="i>0 || pullRequest.hasMergeConflicts">, </span><i class={{getVoteClasses(reviewer)}} title="{{getVoteTooltip(reviewer)}}"></i> <span title="{{reviewer.isRequired ? reviewer.displayName + ' (Required)' : reviewer.displayName}}">{{reviewer.isRequired ? reviewer.displayName + '*' : reviewer.displayName}}</span></span>
+      <span *ngIf="pullRequest.hasMergeConflicts" class="conflicts"><i class="fa fa-exclamation-circle"></i> Merge Conflicts</span><span *ngFor="let reviewer of pullRequest.reviewers; let i=index;"><span *ngIf="i>0 || pullRequest.hasMergeConflicts">,</span><i class={{getVoteClasses(reviewer)}} title="{{getVoteTooltip(reviewer)}}"></i><span title="{{reviewer.isRequired ? reviewer.displayName + ' (Required)' : reviewer.displayName}}">{{reviewer.isRequired ? reviewer.displayName + '*' : reviewer.displayName}}</span></span>
     </div>
   </div>
 </div>
