--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,6 +8,12 @@
   font-size: 16px;
 }
 
+.category-remainder {
+  margin-top: 6px;
+  margin-left: 6px;
+  font-size: 14px;
+}
+
 .pull-requests {
 }
 
@@ -19,10 +25,6 @@
   display: flex;
   align-items: center;
   margin: 3px;
-}
-
-.my-widget .pull-request {
-  margin: 1px !important;
 }
 
 .identity-image-container {
